--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -168,7 +168,7 @@ header {
 }
 
 #sign-menu div {
-  width:75px;
+  width:100%;
   height: 30px;
   text-align: center;
   display: grid;
@@ -357,6 +357,7 @@ footer {
 /* go top btn */
 
 #go-top-btn {
+  display: none;
   height: 40px; 
   width: 30px;
   background: rgba(0, 0, 0, 0.05);
@@ -378,21 +379,20 @@ footer {
 
 /* RWD */
 
-@media (min-width: 768px) {
-  .container {
-    max-width: 100%;
-  }
-}
 
 @media (min-width: 550px) {
   .container {
-    max-width: 100%;
+    max-width: 90%;
   }
 }
 
 @media (max-width: 550px) {
   .container {
     width: 100%;
+  }
+
+  #upper-nav {
+    grid-template-columns: 100px 1fr 100px;
   }
 }
 
