--- a/app/assets/stylesheets/khroma.css
+++ b/app/assets/stylesheets/khroma.css
@@ -1,5 +1,76 @@
 /* khroma index */
 
+#home-page {
+  margin-top: -30px;
+}
+.home-bg {
+  background-image: url(home-bg.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+.home-page-overlay {
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.home-page-panel {
+  height: 550px;
+  color: white;
+  vertical-align: middle;
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: 1fr;
+  align-content: center;
+}
+
+.home-page-panel h3 {
+  font-weight: 300;
+  font-family: 'Montserrat', sans-serif;
+  opacity: 0.95;
+}
+
+.home-page-panel button {
+  width: 100px;
+  background: var(--orange);
+  border-radius: 9999px;
+  margin: 10px 10px 0 0;
+}
+
+.home-page-panel button:hover {
+  background: #ffab26;
+}
+.promote-panel {
+  height: 80px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+}
+
+.promote-item {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  align-items: center;
+}
+
+.promote-item .promote-icon {
+  font-size: 34px;
+}
+
+.promote-item h6 {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+/* match */
+
+#match {
+  background: #000;
+  padding: 50px;
+}
 .match-choice-panel {
   display: grid;
   grid-gap: 50px;
@@ -45,4 +116,29 @@
   justify-self: center;
   font-weight: 900;
   font-size: 18px;
+}
+
+/*  RWD */
+
+@media (max-width: 960px) {
+  .promote-item {
+    grid-template-columns: 1fr;
+    text-align: center;
+    justify-self: center !important;
+  }
+  .promote-item .promote-icon {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .promote-panel {
+    display: none;
+  }
+
+  .home-page-panel {
+    height: 300px;
+    justify-content: center;
+    justify-items: center;
+  }
 }
