--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -8,7 +8,6 @@
   background-color: #FFF;
 }
 
-
 .container > .styles-panel .style-item {
   box-shadow: 0 2px 2px 0 rgba(41,48,59,.24), 0 0 2px 0 rgba(41,48,59,.12);
 }
@@ -21,13 +20,26 @@
   float: right;
 }
 
+#order-selection .btn a {
+  position: relative;
+}
+
+#order-selection .btn a:before{
+    position:absolute;
+    content:'';
+    top:-10px;
+    right:-10px;
+    left:-10px;
+    bottom:-10px;
+}
+
 #order-selection .btn-primary a,
 #order-selection .btn-outline-secondary a {
   color: var(--gray);
 }
 
 #order-selection .btn-primary a,
-#order-selection .btn-outline-secondary a:hover {
+#order-selection .btn-outline-secondary:hover a {
   color: #FFF;
 }
 
