--- a/app/assets/stylesheets/khroma.css
+++ b/app/assets/stylesheets/khroma.css
@@ -69,25 +69,36 @@
 
 #match {
   background: #000;
-  padding: 50px;
+  padding: 100px 0;
 }
 .match-choice-panel {
+  width: 70%;
+  margin: 0 auto;
   display: grid;
   grid-gap: 50px;
-  grid-template-columns: 500px 1fr;
+  grid-template-columns: 1fr 200px;
 }
 
 .left-match-col {
   width: 100%;
   text-align: center;
   justify-self:end;
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
-#up-img-bg, #down-img-bg {
-  height: 400px;
-  width: 400px;
-  border: 1px solid black;
+#up-choice-panel, #down-choice-panel {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr;
+}
 
+.input-group-prepend {
+  display: inline-block;
+}
+
+.input-group-text {
+  padding: 0.3rem 0.75rem;
 }
 
 #match-btn {
