--- a/app/views/khroma/index.html.erb
+++ b/app/views/khroma/index.html.erb
@@ -92,7 +92,7 @@
     </div>    
   </div>
 </section>
-<section id="result">
+<section id="match-result">
   <div class="container">
     <!-- match 結果 -->
     <div id="match-result-panel">
@@ -102,8 +102,7 @@
       <h3>下身 Result</h3>
       <div id="down-result"></div> -->
       <!-- END of Original -->
-      
-      <div id="result"></div>
+    
 
     </div>
   </div>
