--- a/app/views/shared/_match_result.html.erb
+++ b/app/views/shared/_match_result.html.erb
@@ -1,18 +1,21 @@
 <% matches.each do |match| %>
-  <div>
-    <div>-------------------------</div>
-    <div>配色法則: <%= match[0][0] %> - <%= match[1][0] %> x <%= match[1][1] %></div>
+  <div class="match-result-items">
+    <div class="match-priciple-title shadow-box">
+      <div class="result-count">上身: <%= match[2][0].count %> 件  下身: <%= match[2][1].count %> 件</div>
+      <div class="match-priciple-lbl">配色法則: <%= match[0][0] %> - <%= match[1][0] %> x <%= match[1][1] %></div>
+    </div>
     <div><%#= image_tag match[0][1] unless match[0][1] == '' %></div><!-- 配色法則圖片尺寸未設定，很大一張 -->
-    <div>上半身的衣服: <%= match[2][0].count %> 件</div>
-    <% match[2][0].each do |product| %>
-      <div class="styles-panel">
-        <div> - 名稱:<%= product.name %> </div>
-      </div>
-    <% end %>  
-    <div>下半身的衣服: <%= match[2][1].count %> 件</div>
-    <% match[2][1].each do |product| %>
-      <div> - 名稱:<%= product.name %> </div>
-    <% end %>  
+    <div class="styles-panel up-products-panel">
+      <% match[2][0].each do |product| %>
+        <%= render partial: "shared/product_match", locals: {product: product} %>
+      <% end %> 
+    </div> 
+    <div></div>
+    <div class="styles-panel down-products-panel" style="margin-top: 20px;">
+      <% match[2][1].each do |product| %>
+          <%= render partial: "shared/product_match", locals: {product: product} %>
+      <% end %>
+    </div>  
     <% unless match[1][2].nil? %>
       <div>對此配色法則，您還可以選擇 <%= match[1][2] %> 作為其他服飾配件顏色來搭配</div>  
     <% end %>
