--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -44,15 +44,19 @@ a, a:hover, a:focus {
   padding: 5px 10px;
 }
 
-
-
 img {
   width: 100%;
   height: 100%;
   display: block;
 }
 
+.btn, button, button:focus{
+  outline:0px;
+}
 
+button[disabled] {
+  pointer-events: none;
+}
 
 .clearfix::after {
   content: '';
