--- a/app/assets/stylesheets/khroma.css
+++ b/app/assets/stylesheets/khroma.css
@@ -131,14 +131,6 @@
 
 /* result */
 
-.match-result-items {
-  position: relative;
-}
-
-#match-result-panel .product-info {
-  grid-template-rows: 20px 20px 1fr;
-}
-
 .match-priciple-title {
   width: 100%;
   background: var(--lblack);
@@ -149,39 +141,44 @@
   grid-template-columns: 1fr auto;
 }
 
-.match-priciple-title div {
+.up-products-panel, .down-products-panel  {
+  position: relative;
 }
 
-.up-products-panel:before,
-.down-products-panel:before, {
-  content: "";
+.match-left, .match-right {
   position: absolute;
-  top: 206px;
+  top: 186px;
+  font-size: 36px;
+}
+
+.match-left {
   left: -30px;
-  border-style: solid;
-  border-width: 15px 15px 15px 0px;
-  border-color: transparent #000 transparent transparent;
 }
 
-.up-products-panel:after,
-.down-products-panel:after, {
-  content: "";
-  position: absolute;
-  top: 206px;
+.match-right {
   right: -30px;
-  border-style: solid;
-  border-width: 15px 0px 15px 15px ;
-  border-color: transparent transparent transparent #000;
 }
 
-.down-products-panel:before,
-.down-products-panel:after {
-  top: 662px;
+#match-result-panel .product-info {
+  grid-template-rows: 20px 20px 1fr;
 }
 
-#match-result-panel .match-result-items .up-products-panel:nth-child(n+6),
-#match-result-panel .match-result-items .down-products-panel:nth-child(n+6) {
+.styles-panel .style-item {
   display: none;
+}
+
+.styles-panel .show-item {
+  display: block;
+}
+
+.match-right, .match-left {
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+.match-right:hover, .match-left:hover {
+  color: var(--red);
 }
 
 /*  RWD */
