--- a/app/views/shared/_match_result.html.erb
+++ b/app/views/shared/_match_result.html.erb
@@ -1,20 +1,31 @@
 <% matches.each do |match| %>
-  <div class="match-result-items">
+  <div class="match-result-item">
     <div class="match-priciple-title shadow-box">
       <div class="result-count">上身: <%= match[2][0].count %> 件  下身: <%= match[2][1].count %> 件</div>
       <div class="match-priciple-lbl">配色法則: <%= match[0][0] %> - <%= match[1][0] %> x <%= match[1][1] %></div>
     </div>
-    <div><%#= image_tag match[0][1] unless match[0][1] == '' %></div><!-- 配色法則圖片尺寸未設定，很大一張 -->
     <div class="styles-panel up-products-panel">
-      <% match[2][0].each do |product| %>
-        <%= render partial: "shared/product_match", locals: {product: product} %>
+      <% puts match[2][0].count %>
+      <% if match[2][0].count > 4 %>
+        <button class="match-left" disabled><i class="fa fa-caret-left"></i></button>
+      <% end %>  
+      <% match[2][0].each_with_index do |product, i| %>
+        <%= render partial: "shared/product_match", locals: {product: product, i: i} %>
+      <% end %>
+      <% if match[2][0].count > 4 %>
+        <button class="match-right"><i class="fa fa-caret-right"></i></button>
       <% end %> 
     </div> 
-    <div></div>
     <div class="styles-panel down-products-panel" style="margin-top: 20px;">
-      <% match[2][1].each do |product| %>
-          <%= render partial: "shared/product_match", locals: {product: product} %>
+      <% if match[2][1].count > 4 %>
+        <button class="match-left" disabled><i class="fa fa-caret-left"></i></button>
+      <% end %>  
+      <% match[2][1].each_with_index do |product, i| %>
+          <%= render partial: "shared/product_match", locals: {product: product, i: i} %>
       <% end %>
+      <% if match[2][1].count > 4 %>
+        <button class="match-right"><i class="fa fa-caret-right"></i></button>
+      <% end %> 
     </div>  
     <% unless match[1][2].nil? %>
       <div>對此配色法則，您還可以選擇 <%= match[1][2] %> 作為其他服飾配件顏色來搭配</div>  
@@ -22,6 +33,7 @@
   </div>
 <% end %>
 
+<div><%#= image_tag match[0][1] unless match[0][1] == '' %></div><!-- 配色法則圖片尺寸未設定，很大一張 -->
 <!-- 
 matches[i][0][0]: 配色法則名稱
 matches[i][0][1]: 配色法則圖片
