--- a/app/views/shared/_match_result.html.erb
+++ b/app/views/shared/_match_result.html.erb
@@ -2,7 +2,7 @@
   <div class="match-result-item">
     <div class="match-priciple-title shadow-box">
       <div class="result-count">上身: <%= match[2][0].count %> 件  下身: <%= match[2][1].count %> 件</div>
-      <div class="match-priciple-lbl">配色法則: <%= match[0][0] %> - <%= match[1][0] %> x <%= match[1][1] %></div>
+      <div class="match-priciple-lbl">配色法則: <%= match[0][0] %> - <%= match[1][0] %> x <%= match[1][1] %> - <%= match[1][3] %> x <%= match[1][4] %> </div>
     </div>
     <div class="styles-panel up-products-panel">
       <% puts match[2][0].count %>
@@ -40,6 +40,9 @@ matches[i][0][1]: 配色法則圖片
 matches[i][1][0]: 上半身的顏色
 matches[i][1][1]: 下半身的顏色
 matches[i][1][2]: 額外可選的顏色
+matches[i][1][3]: 上半身顏色的hex
+matches[i][1][4]: 下半身顏色的hex
+matches[i][1][5]: 額外可選顏色的hex
 matches[i][2][0]: 上半身的衣服
 matches[i][2][1]: 下半身的衣服
 -->
