--- a/app/assets/stylesheets/khroma.css
+++ b/app/assets/stylesheets/khroma.css
@@ -135,16 +135,43 @@
   width: 100%;
   background: var(--lblack);
   color: #FFF;
-  padding: 10px;
+  padding-right: 10px;
   margin: 20px 0;
   display: grid;
   grid-template-columns: auto 1fr;
+  align-items: center;
 }
 
 .result-count {
   display: grid;
-  grid-template-columns: repeat(4, auto);
-  
+  grid-template-columns: repeat(3, auto);
+}
+
+.result-count .hex-lbl {
+  color: #000;
+  padding: 7px 10px;
+}
+
+.second-hex-lbl {
+  position: relative;
+}
+
+.match-result-item:last-child  .match-principle-title .second-hex-lbl  {
+  color: #FFF;
+}
+
+.second-hex-lbl:before {
+  content: "X";
+  position: absolute;
+  top: 7px;
+  left: -4px;
+  color: #FFF;
+  font-weight: 400;
+}
+
+.count-lbl {
+  align-self: center;
+  margin-left: 20px;
 }
 
 .match-principle-lbl {
@@ -198,11 +225,11 @@
   grid-template-rows: 20px 20px 1fr;
 }
 
-.styles-panel .style-item {
+#match-result-panel .styles-panel .style-item {
   display: none;
 }
 
-.styles-panel .show-item {
+#match-result-panel .styles-panel .show-item {
   display: block;
 }
 
