--- a/app/views/shared/_match_result.html.erb
+++ b/app/views/shared/_match_result.html.erb
@@ -1,16 +1,11 @@
 <% matches.each do |match| %>
   <div class="match-result-item">
-<<<<<<< HEAD
-    <div class="match-priciple-title shadow-box">
-      <div class="result-count">上身: <%= match[2][0].count %> 件  下身: <%= match[2][1].count %> 件</div>
-      <div class="match-priciple-lbl">配色法則: <%= match[0][0] %> - <%= match[1][0] %> x <%= match[1][1] %> - <%= match[1][3] %> x <%= match[1][4] %> </div>
-=======
+
     <div class="match-principle-title shadow-box">
       <div class="result-count">
-        <div><%= match[1][0].hex %></div>
-        <div>X</div>
-        <div><%= match[1][1].hex %></div>
-        <div>上身: <%= match[2][0].count %> 件  下身: <%= match[2][1].count %> 件</div>
+        <div class="hex-lbl" style="background: <%= match[1][3] %>; opacity: 0.8;"><%= match[1][0].split(' ')[1] %></div>
+        <div class="hex-lbl second-hex-lbl" style="background: <%= match[1][4] %>; opacity: 0.8;"><%= match[1][1].split(' ')[1] %></div>
+        <div class="count-lbl">上身: <%= match[2][0].count %> 件 &nbsp;&nbsp; 下身: <%= match[2][1].count %> 件</div>
       </div>
       <div class="match-principle-lbl">
         <div>配色法則: <%= match[0][0] %>
@@ -19,7 +14,6 @@
           </div>
         </div> 
       </div>
->>>>>>> layout/khroma/match
     </div>
     <div class="styles-panel up-products-panel">
       <% puts match[2][0].count %>
@@ -44,9 +38,9 @@
         <button class="match-right"><i class="fa fa-caret-right"></i></button>
       <% end %> 
     </div>  
-    <% unless match[1][2].nil? %>
-      <div>對此配色法則，您還可以選擇 <%= match[1][2] %> 作為其他服飾配件顏色來搭配</div>  
-    <% end %>
+<!--     <% #unless match[1][2].nil? %>
+      <div>對此配色法則，您還可以選擇 <%= #match[1][2] %> 作為其他服飾配件顏色來搭配</div>  
+    <% #end %> -->
   </div>
 <% end %>
 
