complete product match showing

--- a/app/views/khroma/index.html.erb
+++ b/app/views/khroma/index.html.erb
@@ -88,7 +88,9 @@
           </span>
         </div>
       </div>
-      <%= render partial: "shared/match_btn" %>
+      <div id="kroma-index-match">
+        <%= render partial: "shared/match_btn" %>
+      </div>
     </div>    
   </div>
 </section>
