--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,8 +3,12 @@
     <div class="product-panel-lg">
       <%= render partial: "shared/product_lg", locals: { product: @product} %>
     </div>
-    <div id="product-match-btn">
+    <div id="product-match">
       <%= render partial: "shared/match_btn" %>
+    </div>
+    <div id="product-match-result">
+      <div id="match-result-panel">
+      </div>
     </div>
   </div> 
 </div>
