--- a/app/views/shared/_product_lg.html.erb
+++ b/app/views/shared/_product_lg.html.erb
@@ -12,29 +12,29 @@
   <% end %>
 </div>
 <div class="product-info-lg shadow-box-light">
-  <div class="product-title text-center">
+  <% if product.style.type.category.name == "上衣類" %>
+    <% category_name = "up-type" %>
+  <% elsif product.style.type.category.name == "下身類" %>
+    <% category_name = "down-type" %>
+  <% end %>     
+  <div id="<%= product.style.type.id %>" class="product-title text-center <%= category_name %>">
     <%= product.name %>
   </div>
   <div class="row-title">選擇顏色</div>
   <div class="product-color-panel">  
-    <% product.style.colors.each do |color| %>
+    <% product.style.colors.includes(:hue_level).each do |color| %>
       <% if product.color.id == color.id %>
         <% css_class = "color-locked" %>
       <% end %>
       <%= link_to change_color_product_path(color.id), remote: true, class: "#{css_class}" do %>
-        <div id="<%= color.id %>" class="product-color" style="background-color: <%= color.hex %>"></div>
+        <div id="<%= color.id %>" class="product-color" style="background-color: <%= color.hex %>"><span id="<%= color.hue_level.id %>"></span></div>
       <% end %>
     <% end %>
   </div>
   <div class="row-title">品牌</div>
-  <div class="product-brand">
-    
-    <% if product.brand == "lativ" %>
-      <%= image_tag('lativ-logo.png', class: "product-brand-img") %>
-    <% elsif product.brand == "uniqlo" %>
-      <%= image_tag('uniqlo-logo.png', class: "product-brand-img") %>
-    <% end %>
-  </div>
+    <div class="product-brand">
+        <%= image_tag("#{@product.brand}-logo.png", class: "product-brand-img") %>
+    </div>
   <div class="product-price">
     NT$<%= product.price.round %>
   </div>
