--- a/app/views/shared/_product_sm.html.erb
+++ b/app/views/shared/_product_sm.html.erb
@@ -17,11 +17,7 @@
     </div>
     <div class="product-brand-price-row">
       <div class="product-brand">
-        <% if style.products.first.brand == "lativ" %>
-          <%= image_tag('lativ-logo.png', class: "product-brand-img") %>
-        <% elsif style.products.first.brand == "uniqlo" %>
-          <%= image_tag('uniqlo-logo.png', class: "product-brand-img") %>
-        <% end %>
+          <%= image_tag("#{style.products.first.brand}-logo.png", class: "product-brand-img") %>
       </div>
       <div class="product-price">
         $<%= style.products.first.price.round %>
