--- a/app/views/shared/_match_result.html.erb
+++ b/app/views/shared/_match_result.html.erb
@@ -1,10 +1,19 @@
 <% matches.each do |match| %>
   <div class="match-result-item">
-
     <div class="match-principle-title shadow-box">
       <div class="result-count">
-        <div class="hex-lbl" style="background: <%= match[1][3] %>; opacity: 0.8;"><%= match[1][0].split(' ')[1] %></div>
-        <div class="hex-lbl second-hex-lbl" style="background: <%= match[1][4] %>; opacity: 0.8;"><%= match[1][1].split(' ')[1] %></div>
+        <% if match[1][3] == "#000000"%>
+          <% first_black_label = "black-label" %>
+        <% else %>
+          <% first_black_label = "" %>
+        <% end %>
+        <% if match[1][4] == "#000000"%>
+          <% second_black_label = "black-label" %>
+        <% else %>
+          <% second_black_label = "" %>
+        <% end %>
+        <div class="hex-lbl <%= first_black_label %>" style="background: <%= match[1][3] %>; opacity: 0.8;"><%= match[1][0].split(' ')[1] %></div>
+        <div class="hex-lbl second-hex-lbl <%= second_black_label %>" style="background: <%= match[1][4] %>; opacity: 0.8;"><%= match[1][1].split(' ')[1] %></div>
         <div class="count-lbl">上身: <%= match[2][0].count %> 件 &nbsp;&nbsp; 下身: <%= match[2][1].count %> 件</div>
       </div>
       <div class="match-principle-lbl">
