--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -171,12 +171,12 @@ header {
 
 }
 
-#sign-menu div {
-  width:100%;
-  height: 30px;
+#sign-menu a {
+  color: #FFF;
+  padding: 5px 0;
   text-align: center;
-  display: grid;
-  grid-template-columns: 1fr;
+  display: block;
+  width: 100%;
 }
 
 #sign-menu .sign-in-btn {
@@ -193,11 +193,6 @@ header {
 
 #sign-menu .sign-up-btn:hover {
   background: var(--red);
-}
-
-#sign-menu a {
-  color: #FFF;
-  align-self: center;
 }
 
 #menu-user {
@@ -378,6 +373,65 @@ footer {
 
 #go-top-btn p {
   font-size: 8px;
+}
+
+
+/* loading spinner from Spinkit https://github.com/tobiasahlin/SpinKit */
+
+.spinner {
+  margin: 0 auto;
+  width: 70px;
+  text-align: center;
+}
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: var(--dwhite);
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
+
+#spinner-overlay {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 2000;
+  display: none;
+  align-items: center;
+
 }
 
 /* RWD */
