--- a/app/views/shared/_product_lg.html.erb
+++ b/app/views/shared/_product_lg.html.erb
@@ -39,6 +39,13 @@
     NT$<%= product.price.round %>
   </div>
   <div class="product-link">
+    <% if current_user.carts %>
+      <% if current_user.cart_products.include?(product) %>
+        <%= link_to "移出配裝車", cart_path(product), method: :delete %>
+      <% else %>
+        <%= link_to "加入配裝車", carts_path(product), method: :post %>
+      <% end %>
+    <% end %>
     <a href="<%= product.link %>" target="_blank">
       <button class="btn btn-warning">去購買</button>
     </a>
