--- a/app/views/shared/_product_lg.html.erb
+++ b/app/views/shared/_product_lg.html.erb
@@ -43,7 +43,7 @@
       <% if current_user.cart_products.include?(product) %>
         <%= link_to "移出配裝車", cart_path(product), method: :delete %>
       <% else %>
-        <%= link_to "加入配裝車", carts_path(product), method: :post %>
+        <%= link_to "加入配裝車", carts_path(product_id: product), method: :post %>
       <% end %>
     <% end %>
     <a href="<%= product.link %>" target="_blank">
