add kaminari gem

--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -15,5 +15,6 @@
   <div class="styles-panel">
     <%= render partial: "shared/product_sm", collection: @styles, as: :style %>
   </div>
+  <%= paginate @styles %>
 </div>
 
