--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
                     <ul>
                       <li><%= link_to '修改資料', edit_user_path(current_user), remote: true %></li>
                       <li><%= link_to '修改密碼', edit_user_registration_path, remote: true %></li>
+                      <li><%= link_to '我的配色車', user_carts_path(user_id: current_user.id) %></li>
                       <hr />
                       <li><%= link_to '登出', destroy_user_session_path, method: :delete %></li>
                     </ul>
