complete styles infinite_scroll

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -43,6 +43,15 @@
   color: #FFF;
 }
 
+#styles-spinner {
+  margin-top: 50px;
+  color: var(--gray);
+}
+
+#paginate-panel {
+  display: none;
+}
+
 /* RWD */
 
 @media (max-width: 900px) {
