--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -15,6 +15,15 @@
   <div class="styles-panel">
     <%= render partial: "shared/product_sm", collection: @styles, as: :style %>
   </div>
-  <%= paginate @styles %>
+  <div id="styles-spinner" class="text-center">
+    <div class="spinner">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+    </div>
+  </div>
+  <div id="paginate-panel">
+    <%= render partial: "shared/paginate", locals: { styles: @styles} %>
+  </div>
 </div>
 
