--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -15,6 +15,10 @@
   width: 100%;
 }
 
+.user-pill a:hover {
+  color: var(--red);
+}
+
 .cart-type-title {
   background: var(--lblack);
   color: #FFF;
@@ -22,6 +26,7 @@
   padding: 5px 10px;
   margin: 20px 0 10px 0; 
 }
+
 
 .user-profile-panel {
   width: 300px;
