--- a/app/views/styles/change_color.js.erb
+++ b/app/views/styles/change_color.js.erb
@@ -1,7 +1,9 @@
 var url = "/products/<%= @product.id %>"
 var img = "<%= @product.image %>"
 var link = "<%=  @product.link %>"
+var html = '<%= j render partial: "shared/cart_button", locals: {product: @product} %>';
 
 $('#<%= @color.id %>').parents('.style-item').find('.product-img').find('a').attr('href', url);
 $('#<%= @color.id %>').parents('.style-item').find('.product-img').find('img').attr('src', img);
 $('#<%= @color.id %>').parents('.style-item').find('.product-link').find('a').attr('href', link);
+$('#<%= @color.id %>').parents('.style-item').find('.product-cart').html(html);
