--- a/app/views/shared/_cart_button.html.erb
+++ b/app/views/shared/_cart_button.html.erb
@@ -1,5 +1,11 @@
-<% if current_user.cart_products.include?(product) %>
-  <%= link_to "已加入收藏", cart_path(product), method: :delete, class: "following-state" %>
+<% if current_user %>
+  <% if current_user.carts %>
+    <% if current_user.cart_products.include?(product) %>
+      <%= link_to "已加入收藏", cart_path(product), method: :delete, class: "following-state" %>
+    <% else %>
+      <%= link_to "", carts_path(product_id: product), method: :post %>
+    <% end %>
+  <% end %>
 <% else %>
-  <%= link_to "加入收藏", carts_path(product_id: product), method: :post %>
+  <%= link_to '加入收藏', new_user_session_path, remote: true %>
 <% end %>
