Modify: rename helper show_optional_colors

--- a/app/views/shared/_match_result.html.erb
+++ b/app/views/shared/_match_result.html.erb
@@ -47,7 +47,7 @@
         <button class="match-right"><i class="fa fa-caret-right"></i></button>
       <% end %> 
     </div>  
-    <%= show_optional1_colors(optional_colors[i]) %>
+    <%= show_optional_colors(optional_colors[i]) %>
   </div>
 <% end %>
 
