--- a/app/views/shared/_match_btn.html.erb
+++ b/app/views/shared/_match_btn.html.erb
@@ -1,4 +1,4 @@
 <div id="match-btn" class="shadow-box">
   <%= image_tag('hue-ring-500x.png', class: "match-btn-img") %>
-  <div class="match-btn-word">Khroma</div>
+  <div class="match-btn-word">Khroma<br />配一下!</div>
 </div>
