--- a/app/views/shared/_pop_choices.html.erb
+++ b/app/views/shared/_pop_choices.html.erb
@@ -8,4 +8,4 @@
     <% end %>
   </span>
 </div>
-<%= grouped_collection_select(:type, :type_id,  categories, :types, :name, :id, :name, {prompt: '選擇種類'}, {class: "custom-select"}) %>
+<%= grouped_collection_select(:type, :type_id,  categories, :types, :name, :id, :name, {}, {class: "custom-select"}) %>
